--- a/public/components/donacion/donacion.html
+++ b/public/components/donacion/donacion.html
@@ -1,5 +1,5 @@
 <div class="donacion-flotante" id="donacion-componente">
-    <a href="#" title="Ir a la página de donaciones">
+    <a href="./realizar_donativos.html" title="Ir a la página de donaciones">
         <button class="donacion-flotante-boton" aria-label="Abrir panel de donaciones">
             <span class="fas fa-heart donacion-flotante-icono" aria-hidden="true"></span>Donar Ahora
         </button>
