--- a/public/components/footer/footer.html
+++ b/public/components/footer/footer.html
@@ -9,7 +9,7 @@
             <div class="col-md-4 col-lg-4 col-xl-4">
                 <h5 class="footer-titulo">Enlaces</h5>
                 <hr class="mb-4">
-                <p><a class="footer-enlace" href="https://fundacionjaimeschia.netlify.app" title="Ir a la página de inicio">Inicio</a></p>
+                <p><a class="footer-enlace" href="./index.html" title="Ir a la página de inicio">Inicio</a></p>
                 <p><a class="footer-enlace" href="./conocenos.html" title="Conoce más sobre la fundación">Conócenos</a></p>
                 <p><a class="footer-enlace" href="./nuestrosproyectos.html" title="Descubre nuestros proyectos">Nuestros Proyectos</a></p>
                 <p><a class="footer-enlace" href="./blog.html" title="Explora nuestro blog">Blog</a></p>
@@ -18,8 +18,8 @@
             <div class="col-md-3 col-lg-4 col-xl-4">
                 <h5 class="footer-titulo">Legalidad</h5>
                 <hr class="mb-4">
-                <p><a class="footer-enlace" href="#" title="Política de privacidad">Privacidad</a></p>
-                <p><a class="footer-enlace" href="#" title="Términos y condiciones">Términos</a></p>
+                <p><a class="footer-enlace" href="public\politica_tratamiento_datos.html" title="Política de privacidad">Privacidad</a></p>
+                <p><a class="footer-enlace" href="public\terminos_y_condiciones.html" title="Términos y condiciones">Términos</a></p>
             </div>
         </div>
     </div>
