--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -9,7 +9,7 @@
     color: #FFFFFF;
 }
 
-.hastag-seccion p {
+.hastag-seccion h3 {
     font-size: 3vw;
     font-weight: 500;
     text-transform: uppercase;
@@ -48,6 +48,7 @@
     padding: 15px;
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
     transition: all 0.3s;
+    text-decoration: none;
 }
 
 .boton-informacion:hover {
@@ -121,27 +122,33 @@
 }
 
 .boton-donacion {
-    font-size: 15px;
-    border: none;
     background-color: #F4C128;
     color: #000000;
-    border-radius: 30px;
+    border: none;
     padding: 15px;
+    border-radius: 30px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
-    transition: all 0.3s;
+    transition: all 0.3s ease;
 }
 
+
 .boton-donacion:hover {
-    cursor: pointer;
+    background-color: #4cbb5f;
     font-size: 18px;
     color: #FFFFFF;
-    background-color: #4cbb5f;
 }
 
 .icono-donacion {
-    font-size: 20px;
-    margin-right: 5px;
+    margin-right: 5px; 
 }
+
+.icono-donacion {
+    color: #000000;
+}
+
 
 /* -------------------- Estilos Noticias Sección -------------------- */
 .noticias-seccion {
@@ -188,12 +195,14 @@
 .boton-noticias {
     font-size: 12px;
     border: none;
+    display: inline-block;
     background-color: #2793F2;
     color: #FFFFFF;
     border-radius: 30px;
     padding: 8px;
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
     transition: all 0.3s;
+    text-decoration: none;
 }
 
 .boton-noticias:hover {
